--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,20 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# netbeans project
+build/
+dist/
+distribution
+lib/
+nbproject/
+build.xml
+manifest.mf
+
+
